name:                RCL
version:             0.0.1
synopsis:            RTM CLI
license:             MIT
license-file:        LICENSE
author:              Antoine Leblanc
maintainer:          antoine.jp.leblanc@gmail.com

build-type:          Simple
cabal-version:       >=1.8


library
    hs-source-dirs:  src
    ghc-options:     -Wall -Werror -O2 -threaded -feager-blackholing
    exposed-modules: RCL,
                     RCL.Auth,
                     RCL.Constants,
                     RCL.Error,
                     RCL.Query,
                     RCL.Response,
                     RCL.RTM,
                     RCL.Services,
                     RCL.Session,
                     RCL.Types
    build-depends:   base,
                     HUnit,
                     MissingH,
                     QuickCheck,
                     aeson,
                     bytestring,
                     ixset,
                     mtl,
                     text,
                     url,
                     transformers,
                     vector


executable rcl
    hs-source-dirs:  src
    ghc-options:     -Wall -Werror -O2 -threaded -feager-blackholing -fno-warn-missing-signatures
    main-is:         Main.hs
    build-depends:   base,
                     MissingH,
                     aeson,
                     base64-string,
                     bytestring,
                     directory,
                     filepath,
                     http-conduit,
                     ixset,
                     mtl,
                     text,
                     url,
                     transformers,
                     vector,
                     RCL

test-suite tests
    type:            exitcode-stdio-1.0
    hs-source-dirs:  tests
    main-is:         Tests.hs
    build-depends:   base,
                     HUnit,
                     MissingH,
                     QuickCheck,
                     aeson,
                     bytestring,
                     ixset,
                     mtl,
                     text,
                     url,
                     transformers,
                     vector,
                     RCL
