name:                RCL
version:             0.0.1
synopsis:            RTM CLI
license:             MIT
license-file:        LICENSE
author:              Antoine Leblanc
maintainer:          antoine.jp.leblanc@gmail.com

build-type:          Simple
cabal-version:       >=1.8


library
    hs-source-dirs:  src
    ghc-options:     -Wall -Werror -O2 -threaded -feager-blackholing
    exposed-modules: RCL,
                     RCL.Auth,
                     RCL.Config,
                     RCL.Error,
                     RCL.Filter,
                     RCL.Methods,
                     RCL.Query,
                     RCL.Response,
                     RCL.RTM,
                     RCL.Services,
                     RCL.Session,
                     RCL.Task,
                     RCL.Types
    build-depends:   base,
                     HUnit,
                     MissingH,
                     QuickCheck,
                     aeson,
                     bytestring,
                     iso8601-time,
                     ixset,
                     mtl,
                     text,
                     url,
                     time,
                     transformers,
                     vector


executable rcl
    hs-source-dirs:  src
    ghc-options:     -Wall -Werror -O2 -threaded -feager-blackholing -fno-warn-missing-signatures
    main-is:         Main.hs
    build-depends:   base,
                     MissingH,
                     aeson,
                     ansi-terminal,
                     base64-bytestring,
                     bytestring,
                     directory,
                     filepath,
                     http-conduit,
                     iso8601-time,
                     ixset,
                     mtl,
                     text,
                     text-format,
                     url,
                     time,
                     transformers,
                     vector,
                     RCL

test-suite tests
    type:            exitcode-stdio-1.0
    hs-source-dirs:  tests
    main-is:         Tests.hs
    build-depends:   base,
                     HUnit,
                     MissingH,
                     QuickCheck,
                     aeson,
                     bytestring,
                     ixset,
                     mtl,
                     text,
                     url,
                     time,
                     transformers,
                     vector,
                     RCL
